--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -25,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now() function generates a formated date-time string based on current date-time\n",
+    "# Example - now() function generates a formated date-time string based on current date-time\n",
     "# this can be used to generate unique file names e.g.,\n",
     "filename = basic.now(\n",
     "    year=True,\n",
@@ -46,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# numel() returns no of elements in an array of given shape \n",
+    "# Example - numel() returns no of elements in an array of given shape \n",
     "# same as (product of dimensions)\n",
     "shape = (3,4,5)\n",
     "n = basic.numel(shape)\n",
@@ -59,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# arange() is similar to numpy.arange except that it accepts a shape\n",
+    "#  Example - arange() is similar to numpy.arange except that it accepts a shape\n",
     "# and produces multi dim arrays\n",
     "arr = basic.arange(\n",
     "    shape=(3,4,5),\n",
@@ -75,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# symbols class provides some special symbols\n",
+    "# Example - Symbols class provides some special symbols\n",
     "syms = basic.Symbols.__dict__\n",
     "for k,v in syms.items():\n",
     "    if not (k.startswith('__') and k.endswith('__')):  print(f'{v}\\t{k}')"
@@ -87,33 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from known.basic import Verbose as vb # verbose provides printing functions\n",
-    "\n",
-    "# show() can be used to see what other function are avilable in the verbose class\n",
-    "# this is somewhat similar to calling dir()\n",
-    "vb.show(vb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from known.basic import Verbose as vb # verbose provides printing functions\n",
-    "\n",
-    "# dir() is more verbose and includes doc string for members as specified by them\n",
-    "# we can filter special methods e.g. methods (functions) only by specifying filter\n",
-    "vb.dir(vb, doc=True, filter='function')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remap allows to map values from one range to another\n",
+    "#  Example - Remap allows to map values from one range to another\n",
     "\n",
     "# suppose we want to map values from (100, 300) to range (-1, 1)\n",
     "r = basic.Remap(Input_Range=(100, 300), Output_Range=(-1, 1))\n",
@@ -124,7 +105,7 @@
     "    print(f'{x} -> {a} -> {b} :: {x-b}')\n",
     "    assert(x-b==0)\n",
     "\n",
-    "# this works with numpy arrays\n",
+    "#  Example - this works with numpy arrays\n",
     "import numpy as np\n",
     "\n",
     "l, h = np.array([200, 100, 50]), np.array([300, 150, 75])\n",
@@ -148,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IndexedDict is a special dictionary that stores indices of items as well\n",
+    "#  Example - IndexedDict is a special dictionary that stores indices of items as well\n",
     "# items can be accesed by both key(str) and index(int)\n",
     "D = basic.IndexedDict(\n",
     "    **dict(\n",
@@ -181,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use json to serialize and save objects\n",
+    "#  Example - use json to serialize and save objects\n",
     "# NOTE: objects must be JSON serializable\n",
     "# TIP: use json to save simple objects such as lists, tuples dicts etc\n",
     "\n",
@@ -208,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use pickle to serialize and save objects\n",
+    "#  Example - use pickle to serialize and save objects\n",
     "# NOTE: objects must be pickle serializable\n",
     "# TIP: use pickle to save complex objects including ndarray and tensors\n",
     "\n",
@@ -258,11 +239,277 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BaseConvert\n",
+    "\n",
+    "for number system converision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from known.basic import BaseConvert as bc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example_1 - convert b/w base 10 and any base b\n",
+    "\n",
+    "# convert an integer to given base\n",
+    "b2 = bc.int2base(\n",
+    "    num=205,  # number to be converted\n",
+    "    base=2, # to base \n",
+    "    digs=0, # number of digits in the output, keep 0 to automatically decide)\n",
+    ") # this will return an array of digits in binary (should be read in reverse)\n",
+    "print(f'B Array: {b2}')\n",
+    "print(f'B String:',''.join([f'{n}' for n in b2][::-1]))\n",
+    "# convert back to integer\n",
+    "b10 = bc.base2int(num=b2, base=2)\n",
+    "print(f'Integer: {b10}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example_2 -  we can conver to higher bases, e.g. - IP addresses are 4 digit numbers in base-256\n",
+    "\n",
+    "# convert an integer to given IP address\n",
+    "b256 = bc.int2base(\n",
+    "    num=3232247141,  #number to be converted\n",
+    "    base=256, #to base \n",
+    "    digs=4, # number of digits in the output, keep 0 to automatically decide)\n",
+    ") # this will return an array of digits in binary (should be read in reverse)\n",
+    "print(f'B Array: {b256}')\n",
+    "print(f'B String:','.'.join([f'{n}' for n in b256][::-1]))\n",
+    "\n",
+    "# convert back to integer\n",
+    "b10 = bc.base2int(num=b256, base=256)\n",
+    "print(f'Integer: {b10}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#  Example_3 - convert an ip address to its integer form\n",
+    "ip = '192.168.45.101'\n",
+    "ip_list = ip.split('.')[::-1] # the converter expects reversed array\n",
+    "bip = bc.base2int([int(i) for i in ip_list], base=256)\n",
+    "print(f'{ip} --> {bip}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Example_4 - we can use other symbols as well, e.g., converting a hex-color code\n",
+    "\n",
+    "hex_code = '6f084e'.upper()\n",
+    "# get an integer corresponding to hexcode\n",
+    "b_hex_to_int = bc.to_base_10(\n",
+    "    syms=bc.SYM_HEX, # a symbols dictionary that map symbols to its value (base-10 digits)\n",
+    "    num=hex_code, # the hex-code as string\n",
+    ")\n",
+    "print(f'Integer: {b_hex_to_int}')\n",
+    "\n",
+    "# convert to a color which is a 3-tuple (r,g,b) in base-256 \n",
+    "b,g,r = bc.int2base(num=b_hex_to_int, base=256, digs=3) #<--- NOTE: returns in reverse (bgr)\n",
+    "print(f'RGB: {r,g,b}')\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(2,2))\n",
+    "plt.yticks([])\n",
+    "plt.bar([hex_code], [1], color=(r/255, g/255, b/255, 1.0))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IMGU\n",
+    "\n",
+    "Some image related utilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from known.imgu import Pix\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example - Pix object abstracts a 4-channel image in BRGA format using cv2\n",
+    "\n",
+    "pix = Pix(h=10, w=20) # create a new 4-channel image\n",
+    "\n",
+    "\n",
+    "# save the image\n",
+    "Pix.save(pix, 'image.png')\n",
+    "\n",
+    "\n",
+    "pix.i.shape # pix.i is the underlying array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the image\n",
+    "img=Pix.load('image.png')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# plot it\n",
+    "Pix.plot(img, ratio=0.35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import floor, log\n",
+    "\n",
+    "floor(log(16224434 , 16))\n",
+    "\n",
+    "#img.get_hex_at(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# draw some points on image\n",
+    "img.set_hex_at(2, 5, '6f084e')\n",
+    "\n",
+    "Pix.plot(img, ratio=0.35)\n",
+    "\n",
+    "Pix.save(img, 'image.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img.get_hex_at(2,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# draw some points on image\n",
+    "img.set_color_at(0,3, (255, 0, 0, 255), normalize=False)\n",
+    "img.set_color_at(0,4, (0, 255, 0, 255), normalize=False)\n",
+    "img.set_color_at(0,5, (0, 0, 255, 255), normalize=False)\n",
+    "img.set_color_at(0,6, (255, 255, 0, 255), normalize=False)\n",
+    "img.set_color_at(0,7, (255, 0, 255, 255), normalize=False)\n",
+    "img.set_color_at(0,8, (0, 255, 255, 255), normalize=False)\n",
+    "img.set_color_at(0,9, (0, 0, 0, 255), normalize=False)\n",
+    "#p.draw_points(img, (0,3), (3,0), (2,7), (-3, -4))\n",
+    "Pix.plot(img, ratio=0.35)\n",
+    "\n",
+    "Pix.save(img, 'image.png')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can use matplot lib's colors too\n",
+    "\n",
+    "import matplotlib.colors as mcolors\n",
+    "color_dict = mcolors.CSS4_COLORS\n",
+    "\n",
+    "\n",
+    "# draw some points on image\n",
+    "img.set_hex_at(5, 2, color_dict['forestgreen'])\n",
+    "\n",
+    "Pix.plot(img, ratio=0.35)\n",
+    "\n",
+    "Pix.save(img, 'image.png')\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the image again\n",
+    "img=Pix.load('image.png')\n",
+    "\n",
+    "# plot it\n",
+    "Pix.plot(img, ratio=0.35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k,v in color_dict.items(): print(k, v)"
+   ]
   },
   {
    "attachments": {},
@@ -288,7 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from known import Mail"
+    "from known.mailer import Mail"
    ]
   },
   {
